--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.application'
+project.ext.vectoricons = [
+    iconFontNames: [ 'FontAwesome.ttf', 'Ionicons.ttf' ]
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 android {
     compileSdkVersion 27
@@ -24,5 +28,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':react-native-i18n')
+//    implementation "com.facebook.android:facebook-android-sdk:4.22.1"
     implementation "com.facebook.react:react-native:0.55.4"
 }
