--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
-        "bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/react01/app/src/main/assets/index.android.bundle --assets-dest android/react01/app/src/main/res/"
+        "bundle": "/C/Users/Feng/AppData/Roaming/npm/react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
     },
     "dependencies": {
         "react": "^16.3.1",
-        "react-native": "^0.55.4"
+        "react-native": "^0.55.4",
+        "react-native-i18n": "^2.0.12",
+        "react-native-vector-icons": "^4.6.0",
+        "react-navigation": "^2.6.2"
     }
 }
