--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,5 @@
 include ':app', ':react-native-i18n'
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+include ':react-native-i18n'
 project(':react-native-i18n').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-i18n/android')
