--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':react-native-i18n')
-//    implementation "com.facebook.android:facebook-android-sdk:4.22.1"
     implementation "com.facebook.react:react-native:0.55.4"
+    implementation project(':react-native-vector-icons')
 }
