--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "start": "node node_modules/react-native/local-cli/cli.js start",
         "bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
     },
+    "rnpm": {
+        "assets": ["./resourse/fonts/Montserrat-Medium.ttf"]
+     },
     "dependencies": {
         "buffer": "^5.1.0",
         "js-base64": "^2.4.6",
