--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "assets": [
             "./resourse/fonts/"
         ]
-     },
+    },
     "dependencies": {
         "buffer": "^5.1.0",
+        "firebase": "^5.3.0",
         "js-base64": "^2.4.6",
         "native-base": "^2.7.1",
         "react": "^16.3.1",
@@ -20,6 +21,7 @@
         "react-native-drawer": "^2.5.0",
         "react-native-elements": "^0.19.1",
         "react-native-i18n": "^2.0.12",
+        "react-native-render-html": "^3.10.0",
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "^2.6.2"
     }
