--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
@@ -9,8 +10,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,4 +30,12 @@ allprojects {
             name 'Google'
         }
     }
+}
+
+ext {
+    compileSdkVersion           = 27
+    targetSdkVersion            = 23
+    buildToolsVersion           = "27.0.1"
+    googlePlayServicesVersion   = "15.0.1"
+    supportLibVersion           = "27.1.0"
 }
