--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     },
     "dependencies": {
         "buffer": "^5.1.0",
-        "firebase": "^5.3.0",
         "js-base64": "^2.4.6",
         "native-base": "^2.7.1",
         "react": "^16.3.1",
         "react-native": "^0.55.4",
+        "react-native-camera": "^1.1.4",
         "react-native-drawer": "^2.5.0",
         "react-native-elements": "^0.19.1",
+        "react-native-firebase": "^4.3.7",
+        "react-native-gifted-chat": "^0.4.3",
         "react-native-i18n": "^2.0.12",
         "react-native-render-html": "^3.10.0",
         "react-native-vector-icons": "^4.6.0",
