--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
         "native-base": "^2.7.1",
         "react": "^16.3.1",
         "react-native": "^0.55.4",
-        "react-native-camera": "^1.1.4",
+        "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera",
         "react-native-drawer": "^2.5.0",
         "react-native-elements": "^0.19.1",
         "react-native-firebase": "^4.3.7",
+        "react-native-fs": "^2.10.14",
         "react-native-gifted-chat": "^0.4.3",
         "react-native-i18n": "^2.0.12",
         "react-native-render-html": "^3.10.0",
