--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,6 +109,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -148,7 +149,7 @@ dependencies {
     implementation project(':react-native-i18n')
     implementation project(':react-native-video')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:27.0.1"
+    implementation "com.android.support:appcompat-v7:27.1.0"
     implementation "com.facebook.react:react-native:+"
 
     // firebase
@@ -156,6 +157,7 @@ dependencies {
     implementation "com.google.firebase:firebase-core:16.0.1"
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 // Run this once to be able to run the application with BUCK
