--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^16.3.1",
         "react-native": "^0.55.4",
         "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera",
+        "react-native-device-info": "^0.22.4",
         "react-native-drawer": "^2.5.0",
         "react-native-elements": "^0.19.1",
         "react-native-firebase": "^4.3.7",
@@ -27,7 +28,7 @@
         "react-native-render-html": "^3.10.0",
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "^2.6.2",
-        "realm" : "2.13.0",
-        "videomodule": "./video"
+        "videomodule": "./video",
+        "realm": "^2.13.0"
     }
 }
