--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "buffer": "^5.1.0",
         "js-base64": "^2.4.6",
+        "moment": "^2.22.2",
         "native-base": "^2.7.1",
         "react": "^16.3.1",
         "react-native": "^0.55.4",
