--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -19,8 +19,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
-        jcenter()
         maven {
             // All of React Native (JS,                                                                                                                          Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
@@ -29,6 +29,7 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        jcenter()
     }
 }
 
