--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "buffer": "^5.1.0",
         "js-base64": "^2.4.6",
+        "jsencrypt": "^3.0.0-rc.1",
         "moment": "^2.22.2",
         "native-base": "^2.7.1",
         "react": "^16.3.1",
@@ -27,9 +28,9 @@
         "react-native-gifted-chat": "^0.4.3",
         "react-native-i18n": "^2.0.12",
         "react-native-render-html": "^3.10.0",
-        "react-native-vector-icons": "^4.6.0",
+        "react-native-vector-icons": "^6.1.0",
         "react-navigation": "^2.6.2",
-        "videomodule": "./video",
-        "realm": "^2.13.0"
+        "realm": "^2.13.0",
+        "videomodule": "./video"
     }
 }
