--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "buffer": "^5.1.0",
+        "crypto-js": "^3.1.9-1",
         "js-base64": "^2.4.6",
         "jsencrypt": "^3.0.0-rc.1",
         "moment": "^2.22.2",
