--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-native-i18n": "^2.0.12",
         "react-native-render-html": "^3.10.0",
         "react-native-vector-icons": "^6.1.0",
+        "react-native-video": "./video",
         "react-navigation": "^2.6.2",
         "realm": "^2.13.0",
         "videomodule": "./video"
